--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             background-color: #ADD8E6; /* Light Blue */
             text-align: center;
             color: #000080; /* Dark Blue */
@@ -113,24 +113,24 @@
         /* Media Queries for Mobile Optimization */
         @media (max-width: 600px) {
             h1 {
-                font-size: 2em;
+                font-size: 2.5em;
             }
             #problem {
-                font-size: 2em;
+                font-size: 2.5em;
             }
             input[type="text"], button {
-                font-size: 1.2em;
-                padding: 10px;
+                font-size: 1.4em;
+                padding: 12px;
             }
             #feedback, #score {
-                font-size: 1.2em;
+                font-size: 1.4em;
             }
             #nameInput label {
-                font-size: 1.2em;
+                font-size: 1.4em;
             }
             #nameInput input[type="text"] {
-                font-size: 1.2em;
-                padding: 10px;
+                font-size: 1.4em;
+                padding: 12px;
             }
             #gameContent {
                 width: 95%;
