--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
         <label for="grade4">4th Grade</label>
         <input type="radio" id="grade5" name="grade" value="5" checked>
         <label for="grade5">5th Grade</label><br><br>
+        <label>Select a category:</label><br>
+        <input type="radio" id="mathCategory" name="category" value="math" checked>
+        <label for="mathCategory">Math</label>
+        <input type="radio" id="scienceCategory" name="category" value="science">
+        <label for="scienceCategory">Science</label><br><br>
         <button onclick="startGame()">Dive In!</button>
     </div>
 
