--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
             background-color: #ADD8E6; /* Light Blue */
             text-align: center;
             color: #000080; /* Dark Blue */
@@ -17,7 +17,7 @@
             text-shadow: 2px 2px 4px #000000;
         }
         #problem {
-            font-size: 3.5em;
+            font-size: 2.5em;
             margin-bottom: 20px;
             color: #FFA500; /* Orange */
             text-shadow: 1px 1px 2px #000000;
@@ -42,9 +42,6 @@
         button:hover {
             background-color: #20B2AA; /* Aquamarine */
         }
-        .spacedButton {
-            margin-bottom: 20px;
-        }
         #feedback {
             margin-top: 20px;
             font-size: 1.5em;
@@ -62,17 +59,13 @@
             50% { opacity: 1; }
             100% { opacity: 0; }
         }
-        @keyframes swim {
-            0% { transform: translateX(-100px); }
-            100% { transform: translateX(100vw); }
-        }
         #score {
             margin-top: 20px;
             font-size: 1.5em;
             color: #006400; /* Dark Green */
         }
         #nameInput {
-            margin-bottom: 50px;
+            margin-bottom: 30px;
         }
         #nameInput label {
             font-size: 1.5em;
@@ -87,7 +80,7 @@
             padding: 20px;
             border: 2px solid #4682B4;
             border-radius: 15px;
-            margin: 30px auto;
+            margin: 20px auto;
             width: 80%;
             background-color: #E0FFFF; /* Light Cyan */
         }
@@ -113,24 +106,24 @@
         /* Media Queries for Mobile Optimization */
         @media (max-width: 600px) {
             h1 {
-                font-size: 3.5em;
+                font-size: 2em;
             }
             #problem {
-                font-size: 3.5em;
+                font-size: 2em;
             }
             input[type="text"], button {
-                font-size: 1.8em;
-                padding: 16px;
+                font-size: 1.2em;
+                padding: 10px;
             }
             #feedback, #score {
-                font-size: 1.8em;
+                font-size: 1.2em;
             }
             #nameInput label {
-                font-size: 1.8em;
+                font-size: 1.2em;
             }
             #nameInput input[type="text"] {
-                font-size: 1.8em;
-                padding: 16px;
+                font-size: 1.2em;
+                padding: 10px;
             }
             #gameContent {
                 width: 95%;
@@ -141,32 +134,18 @@
     </style>
 </head>
 <body>
-    <div id="debug"></div>
     <h1>Underwater Math Adventure!</h1>
     <div id="nameInput">
         <label for="userName">Enter your name, future marine biologist:</label>
         <input type="text" id="userName" placeholder="Your Name">
-        <br><br>
-        <label>Select your grade:</label><br>
-        <input type="radio" id="grade3" name="grade" value="3">
-        <label for="grade3">3rd Grade</label>
-        <input type="radio" id="grade4" name="grade" value="4">
-        <label for="grade4">4th Grade</label>
-        <input type="radio" id="grade5" name="grade" value="5" checked>
-        <label for="grade5">5th Grade</label><br><br>
-        <label>Select a category:</label><br>
-        <input type="radio" id="mathCategory" name="category" value="math" checked>
-        <label for="mathCategory">Math</label>
-        <input type="radio" id="scienceCategory" name="category" value="science">
-        <label for="scienceCategory">Science</label><br><br>
         <button onclick="startGame()">Dive In!</button>
     </div>
 
     <div id="gameContent">
         <div id="problem"></div>
         <input type="text" id="answer" placeholder="Enter your answer, matey!" onkeypress="handleKeyPress(event)">
-        <button id="skipButton" class="spacedButton" onclick="skipProblem()">Skip</button>
-        <button class="spacedButton" onclick="checkAnswer()">Submit</button>
+        <button id="skipButton" onclick="skipProblem()">Skip</button>
+        <button onclick="checkAnswer()">Submit</button>
         <div id="feedback"></div>
         <div id="celebration">🎉 Correct, you found treasure! 🎉</div>
         <div id="score">
@@ -176,8 +155,6 @@
             Skipped: <span id="skippedCount">0</span>
         </div>
     </div>
-    <script>
-</script>
     <script src="script.js"></script>
 </body>
 </html>
