--- a/index.html
+++ b/index.html
@@ -1,158 +1,132 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Underwater Math Adventure!</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Science Game</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            background-color: #ADD8E6; /* Light Blue */
-            text-align: center;
-            color: #000080; /* Dark Blue */
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f8ff;
             margin: 0;
             padding: 0;
-        }
-        h1 {
-            color: #008080; /* Teal */
-            text-shadow: 2px 2px 4px #000000;
-        }
-        #problem {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            color: #FFA500; /* Orange */
-            text-shadow: 1px 1px 2px #000000;
-        }
-        input[type="text"] {
-            padding: 15px;
-            font-size: 1.5em;
-            border: 2px solid #4682B4; /* Steel Blue */
-            border-radius: 10px;
-            text-align: center;
-        }
-        button {
-            padding: 15px 30px;
-            font-size: 1.5em;
-            cursor: pointer;
-            background-color: #40E0D0; /* Turquoise */
-            color: #000080; /* Dark Blue */
-            border: none;
-            border-radius: 10px;
-            box-shadow: 3px 3px 5px #888888;
-        }
-        button:hover {
-            background-color: #20B2AA; /* Aquamarine */
-        }
-        #feedback {
-            margin-top: 20px;
-            font-size: 1.5em;
-            font-weight: bold;
-            color: #8B4513; /* Saddle Brown */
-        }
-        #celebration {
-            display: none;
-            font-size: 3em;
-            color: green;
-            animation: fadeInOut 2s infinite;
-        }
-        @keyframes fadeInOut {
-            0% { opacity: 0; }
-            50% { opacity: 1; }
-            100% { opacity: 0; }
-        }
-        #score {
-            margin-top: 20px;
-            font-size: 1.5em;
-            color: #006400; /* Dark Green */
-        }
-        #nameInput {
-            margin-bottom: 30px;
-        }
-        #nameInput label {
-            font-size: 1.5em;
-            color: #000080;
-        }
-        #nameInput input[type="text"] {
-            padding: 15px;
-            font-size: 1.5em;
-        }
-        #gameContent {
-            display: none; /* Initially hide the game content */
-            padding: 20px;
-            border: 2px solid #4682B4;
-            border-radius: 15px;
-            margin: 20px auto;
-            width: 80%;
-            background-color: #E0FFFF; /* Light Cyan */
-        }
-        #skipButton {
-            display: block;
-            margin: 10px auto;
-            padding: 10px 20px;
-            font-size: 1.2em;
-            cursor: pointer;
-            background-color: #FFA07A; /* Light Salmon */
-            color: #000080;
-            border: none;
-            border-radius: 10px;
-            box-shadow: 3px 3px 5px #888888;
-            margin-top: 10px;
-        }
-        #skipped {
-            margin-top: 20px;
-            font-size: 1.5em;
-            color: #8B4513; /* Saddle Brown */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
 
-        /* Media Queries for Mobile Optimization */
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 2em;
-            }
-            #problem {
-                font-size: 2em;
-            }
-            input[type="text"], button {
-                font-size: 1.2em;
-                padding: 10px;
-            }
-            #feedback, #score {
-                font-size: 1.2em;
-            }
-            #nameInput label {
-                font-size: 1.2em;
-            }
-            #nameInput input[type="text"] {
-                font-size: 1.2em;
-                padding: 10px;
-            }
-            #gameContent {
-                width: 95%;
-                margin: 10px auto;
-                padding: 10px;
-            }
+        .container {
+            background-color: #e0f2f7;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            padding: 30px;
+            text-align: center;
         }
+
+        h1 {
+            font-size: 3em;
+            color: #3f51b5;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            font-size: 1.2em;
+            color: #1a237e;
+            margin-top: 10px;
+            display: inline-block; /* Changed to inline-block */
+            margin-right: 15px; /* Added spacing between label and radio */
+        }
+
+        input[type="text"] {
+            padding: 12px;
+            margin: 10px 0;
+            border: 2px solid #b2ebf2;
+            border-radius: 5px;
+            width: 250px;
+            font-size: 1em;
+            color: #0d47a1;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        button {
+            padding: 12px 20px;
+            background-color: #29b6f6;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        button:hover {
+            background-color: #039be5;
+        }
+
+        #game-area {
+            margin-top: 20px;
+        }
+
+        #question {
+            font-size: 1.5em;
+            color: #0d47a1;
+            margin-bottom: 20px;
+        }
+
+        input[type="radio"] {
+            margin: 10px;
+        }
+
+        #result-area {
+            font-size: 1.2em;
+            color: #2e7d32;
+            margin-top: 20px;
+            font-weight: bold;
+        }
+
+        #score-area {
+            font-size: 1.2em;
+            color: #1a237e;
+            margin-top: 10px;
+        }
+
+        /* Added to contain radio and label in a row */
+        .radio-container {
+            display: flex;
+            align-items: center;
+            margin-bottom: 8px;
+        }
+
     </style>
 </head>
 <body>
-    <h1>Underwater Math Adventure!</h1>
-    <div id="nameInput">
-        <label for="userName">Enter your name, future marine biologist:</label>
-        <input type="text" id="userName" placeholder="Your Name">
-        <button onclick="startGame()">Dive In!</button>
-    </div>
-
-    <div id="gameContent">
-        <div id="problem"></div>
-        <input type="text" id="answer" placeholder="Enter your answer, matey!" onkeypress="handleKeyPress(event)">
-        <button id="skipButton" onclick="skipProblem()">Skip</button>
-        <button onclick="checkAnswer()">Submit</button>
-        <div id="feedback"></div>
-        <div id="celebration">🎉 Correct, you found treasure! 🎉</div>
-        <div id="score">
-            Correct: <span id="correctCount">0</span> | Incorrect: <span id="incorrectCount">0</span>
+    <div class="container">
+        <h1>Science Game</h1>
+        <div id="name-input">
+            <label for="name">Enter your name:</label>
+            <input type="text" id="name" name="name">
+            <button onclick="startGame()">Submit</button>
         </div>
-        <div id="skipped">
-            Skipped: <span id="skippedCount">0</span>
+        <div id="game-area" style="display:none;">
+            <div id="question-area">
+                <p id="question"></p>
+                <form id="answer-form">
+                    <div class="radio-container">
+                        <input type="radio" id="answer1" name="answer" value="option1">
+                        <label for="answer1" id="answer1-label">Option 1</label>
+                    </div>
+                    <div class="radio-container">
+                        <input type="radio" id="answer2" name="answer" value="option2">
+                        <label for="answer2" id="answer2-label">Option 2</label>
+                    </div>
+                </form>
+                <button onclick="checkAnswer()">Submit Answer</button>
+            </div>
+            <div id="result-area"></div>
+            <div id="score-area"></div>
         </div>
     </div>
     <script src="script.js"></script>
